<resources>
    <string name="app_name">Groundhog Reader</string>
<string name="done">Done</string>
	<string name="groupscolon">Groups: </string>
	<string name="subjectcolon">Subject: </string>
	<string name="authorcolon">Author: </string>
	<string name="datecolon">Date: </string>
		<string name="category_connection">Connection</string>
		<string name="section_mandatory">This section is mandatory</string>
		<string name="server_address_title">Server Address</string>
		<string name="server_address_summary">News server Address</string>
		<string name="server_address_dialog_title">Server host address:</string>
		<string name="server_address_dialog_message">Enter your usenet server address (without the nntp://)</string>
		<string name="server_port_title">Server Port</string>
		<string name="server_port_summary">Port the server uses (usually 119)</string>
		<string name="server_port_dialog_title">Server port number:</string>
		<string name="server_need_login_title">Server needs login</string>
		<string name="server_need_login_summary">Enable it if the server need user and pass</string>
		<string name="login_name_title">Login name</string>
		<string name="login_name_summary">Connection login name (this is NOT the user shown in posts!)</string>
		<string name="login_name_dialog_title">Enter login name</string>
		<string name="pass_title">Password</string>
		<string name="pass_summary">Connection login password</string>
		<string name="pass_dialog_title">Enter password</string>
		<string name="maxfetch_title">Max article fetch</string>
		<string name="maxfetch_summary">Max articles to fetch when getting new ones</string>
		<string name="maxfetch_dialog_title">Max fetch</string>
		<string name="category_userinfo">User info</string>
		<string name="summary_userinfo">User information (name, email, etc.)</string>
		<string name="name_title">Name</string>
		<string name="name_summary">Name to use on posts</string>
		<string name="name_dialog_title">Enter name</string>
		<string name="email_title">Email</string>
		<string name="email_summary">Email to use on posts (mandatory but can be fake)</string>
		<string name="email_dialog_title">Enter email</string>
		<string name="signature_title">Signature</string>
		<string name="signature_summary">Optionally put your customized signature</string>
		<string name="signature_dialog_title">Write signature</string>
		<string name="category_posting">Posting</string>
		<string name="posting">Posting</string>
		<string name="post_charset_title">Posting Charset</string>
		<string name="post_charset_summary">Charset to use on the articles you post</string>
			<string name="quote_title">Use quote selector</string>
		<string name="quote_summary">Enable the screen for easy quoting before posting</string>
		<string name="replycursor_title">Reply cursor at start</string>
		<string name="replycursor_summary">If enabled, put the cursor at the start of the article when replying</string>
		<string name="followup_title">Multiple followups</string>
		<string name="followup_summary">When replying a article posted to several groups followup to...</string>
		<string name="followup_dialog_title">Followup to...</string>
		<string name="quotestring_title">Article quoting header</string>
		<string name="quotestring_summary">Click to configure the initial line of the quoted text when replying</string>
		<string name="quotestring_dialog_title">Configure line</string>
		<string name="quotestring_dialog_message">Write the text to show as the first line of the original article before the quoted part. You can use the tokens [date] and [user] that will be replaced on the line with the appropiate values. For example the default value is: On [date], [user] wrote:</string>
		<string name="default_quote_header">On [date], [user] wrote:</string>
		<string name="offlinemode_title">Offline mode posting</string>
		<string name="offlinemode_summary">If enabled, articles posted in offline mode will tried to be sent online first</string>
		<string name="post_charset_dialog_title">Pick your charset</string>
		<string name="options_reading">Options related to reading</string>
		<string name="read_charset_title">Read Default Charset</string>
		<string name="read_charset_summary">Default charset for reading</string>
		<string name="read_charset_dialog_title">Pick your charset</string>
		<string name="replies_title">Highlight my replies</string>
		<string name="replies_summary">Highlight direct replies to my articles</string>
		<string name="expire_mode">Read articles expiration</string>
		<string name="expire_mode_summary">When to delete read articles</string>
		<string name="expire_modes_dialog_title">Expiration mode</string>
	<string name="close">Close</string>
	<string name="cancel">Cancel</string>
	<string name="btn_search_groups">Search Groups</string>
	<string name="statuscolon">Status:</string>
	<string name="starting_d">Starting...</string>
	<string name="banned_menu_select">Select all</string>
	<string name="banned_menu_deselect">Deselect all</string>
	<string name="send">Post</string>
	<string name="discard">Discard</string>
	<string name="compose_deletetext">Delete all text</string>
	<string name="compose_increasesize">Increase text size</string>
	<string name="compose_decreasesize">Decrease text size</string>
	<string name="compose_changue_post_charset">Change post charset</string>
<string name="mark_all_read">Mark all as read</string>
<string name="unsubscribe_group">Unsubscribe group</string>
<string name="grouplist_getall">Get All Articless</string>
<string name="grouplist_add_groups">Add Groups</string>
<string name="grouplist_set_offline">Set Offline Mode</string>
<string name="show_help">Show QuickHelp</string>
<string name="global_settings">Settings</string>
<string name="clear_cache">Clear Cache</string>
<string name="msglist_mark_thread_read">Mark thread as read</string>
<string name="msglist_mark_thread_unread">Mark thread as unread</string>
<string name="msglist_star_thread">Star/Un-Star thread</string>
<string name="msglist_ban_thread">Ban thread</string>
<string name="msglist_ban_author">Ban author</string>
<string name="msglist_newpost">New post</string>
<string name="msglist_group_list">Groups List</string>
<string name="msglist_refresh">Refresh</string>
<string name="msglist_getnew">Get new articles</string>
<string name="msglist_markread">Mark all read</string>
<string name="msglist_manage_banned">Manage banned threads</string>
<string name="msglist_manage_banned_users">Manage banned users</string>
<string name="msglist_change_read_charset">Change read charset</string>
<string name="reply">Reply</string>
<string name="keep_unread">Keep Unread</string>
<string name="forward">Forward by Email</string>
<string name="ban_author">Ban Author</string>
<string name="toggle_favorite">Toggle Favorite</string>
<string name="increase_text_size">Increase text size</string>
<string name="decrease_text_size">Decrease text size</string>
<string name="showheaders">Show/Hide full headers</string>
<string name="nothing_to_do">Nothing to do</string>
<string name="there_are_no_bans">There are no bans</string>
<string name="return_">Return</string>
<string name="encoding">Encoding</string>
<string name="change_encoding_tip"> (you can changue it with Menu &amp; Encoding)</string>
<string name="posting_message">Posting Article...</string>
<string name="empty_groups">empty groups!</string>
<string name="must_select_group">&quot;You must select some group on the Groups field!</string>
<string name="error_posting">Error posting!</string>
<string name="group_offline_mode">Group List (offline mode)</string>
<string name="group_online_mode">Group List (online mode)</string>
<string name="group_headers">Group headers</string>
<string name="server_change_detected">Server change detected - the old headers have been deleted</string>
<string name="deleting_d">Deleting...</string>
<string name="unsubscribing_deleting_caches">Unsubscribing and deleting caches...</string>
<string name="marking_read_deleting_caches">Marking all articles as read and deleting read articles cache...</string>
<string name="sync_messages">Sync Articles</string>
<string name="set_online_mode">Set Online Mode</string>
<string name="get_all_headers">Get All Headers</string>
<string name="set_offline_mode">Set Offline Mode</string>
<string name="confirm_expire_messages">Do you want to delete all read articles?</string>
<string name="group_menu">Group menu</string>
<string name="error">Error</string>
<string name="mark_read_question">Do you want to mark all articles in {0} as read?</string>
<string name="yes">Yes</string>
<string name="no">No</string>
<string name="unsubscribe_question">Do you want to unsubscribe from {0}?</string>
<string name="unsubscribe">Unsubscribe</string>
<string name="get_new">Get new</string>
<string name="warning_online_to_offline_sync">Warning: the group has articles with headers but without contents (downloaded in online mode.) Do you want to get the contents now? (if you don\'t, the content will be
 fetched from the net when you click on a article, even in offline mode)</string>
<string name="yes_sync">Yes (sync)</string>
<string name="no_enter_anyway">No (enter anyway)</string>
<string name="fetch_headers_question">Do you want to fetch new headers for {0}?</string>
<string name="asking_new_articles">Asking for new articles</string>
<string name="full_messages">full articles</string>
<string name="headers">headers</string>
<string name="getting_something">Getting {0}</string>
<string name="interrupted">Interrupted</string>
<string name="auth_error">Auth Error</string>
<string name="posting_pending_messages">Posting pending articles</string>
<string name="finished">Finished</string>
<string name="error_post_check_settings">There was an error trying to get or post the articles. Please check your connection settings:\n</string>
<string name="download_interrupted_sleep">Download interrupted (Android sent me to sleep, probably)</string>
<string name="error_authenticating_check_pass">There was an error trying to authenticate. Please check your user and password with your server:\n</string>
<string name="loading_help_d">Loading help...</string>
<string name="at_first_message">You\'re already at the first article</string>
<string name="no_more_messages">There are no more articles in the group</string>
<string name="open_save_attach_question">Open or save attachment?</string>
<string name="open">Open</string>
<string name="save">Save</string>
<string name="saved_to">Saved to </string>
<string name="attachment">Attachment</string>
<string name="could_not_save_colon">Could not save: </string>
<string name="stored_outbox_send_next_sync">Article stored in outbox, will be posted in next sync</string>
<string name="message_sent">Article sent</string>
<string name="message_discarded">Article discarded</string>
<string name="reload_tosee_unbanned_authors">Use reload on the article list to see un-banned authors</string>
<string name="nothing_to_unban">Nothing to unban</string>
<string name="cant_reply_no_header_data">Can\'t reply; no header data</string>
<string name="message_marked_unread">Article marked as unread</string>
<string name="author_banned_reload_tohide">Author banned, reload on the article list to hide</string>
<string name="cant_ban_no_header_data">Can\'t ban author; no header data</string>
<string name="followup_multigroup_question">The article goes to more than one group. Do you want to followup to all or only to the current group? The groups are:\n</string>
<string name="followup_all_groups">All</string>
<string name="followup_current_group">Current</string>
<string name="must_fill_name_email_goto_settings">You must fill your name and email (can be fake) on the settings (on the User Info section). Do you want to go to the settings now?</string>
<string name="select_quote">Select Text to Quote</string>
<string name="all">All</string>
<string name="none">None</string>
</resources>