<?xml version="1.0" encoding="utf-8"?>

	<!--  Layout principal vertical -->
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/main_message_layout"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:gravity="bottom"
	android:textColor="#000000"
	android:background="#FFFFFF">

	<!-- Barra Superior -->
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<ImageButton
			android:id="@+id/btn_gogroup"
			style="@style/titleBar.button"
			android:src="@drawable/ic_title_home"
			android:layout_gravity="left" />

		<ImageView
			style="@style/titleBar.spacer" />

		<TextView
			android:id="@+id/text_newsgroup"
			style="@style/titleBar.title" />
		<ImageView
			style="@style/titleBar.spacer" />

		<ImageView
			android:id="@+id/img_love"
			style="@style/titleBar.button" />
	</LinearLayout>

	<!-- ScrollView para que el cuerpo del mensaje se pueda desplazar -->
	<ScrollView
		android:id="@+id/textAreaScroller"
		android:layout_width="fill_parent"
		android:layout_height="0dip"
		android:layout_weight="1">

		<LinearLayout
			xmlns:android="http://schemas.android.com/apk/res/android"
			android:orientation="vertical"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:gravity="bottom">

			<!--  Layout horizontal de Date -->
			<TableLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:background="#cccccc">
				<TableRow
				    android:id="@+id/layout_subject"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content">
					<TextView
						android:id="@+id/text_subjectlabel"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/subjectcolon"
						android:textStyle="italic"
						android:textColor="#000000" />
					<TextView
						android:id="@+id/text_subject"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textStyle="bold"
						android:textColor="#000000" 
                        android:singleLine="false" />
				</TableRow>
				<TableRow
                android:id="@+id/layout_author"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content">
					<TextView
						android:layout_height="wrap_content"
						android:text="@string/authorcolon" />
					<TextView
						android:id="@+id/text_author"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textStyle="italic"
						android:textColor="#000000" 
                        android:singleLine="false" />
				</TableRow>
				<TableRow
                android:id="@+id/layout_date"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content">
					<TextView
						android:layout_height="wrap_content"
						android:text="@string/datecolon" />
					<TextView
						android:id="@+id/text_date"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textStyle="bold"
						android:textColor="#000000" 
                        android:singleLine="false" />
				</TableRow>
			</TableLayout>

			<!-- Main message view -->
			<WebView
				android:id="@+id/text_content"
				android:layout_width="fill_parent"
				android:layout_height="0px"
				android:layout_weight="1"
				android:padding="3px" />
		</LinearLayout>
	</ScrollView>

	<!--  Layout horizontal para los botones -->
	<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">

		<ImageButton
			android:id="@+id/btn_prev"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:src="@drawable/left_arrow_grey"
			android:layout_weight="1" />
		<ImageButton
			android:id="@+id/btn_next"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:src="@drawable/right_arrow_grey"
			android:layout_weight="1" />

	</LinearLayout>
</LinearLayout>